--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
+    "slugify": "^1.6.5",
     "validator": "^13.7.0"
   }
 }
