--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.9.1",
     "slugify": "^1.6.5",
     "validator": "^13.7.0"
   }
