--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "node-geocoder": "^4.2.0",
